--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -72,13 +72,16 @@
                         <a class="page-scroll" href="#introduction">Intro</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#program">Program</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#keynote">Keynotes</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#call">CFP</a>
+                        <a class="page-scroll" href="#papers">Accepted Paper & Posters</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#program">Program</a>
+                        <a class="page-scroll" href="#call">CFP</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#dates">Dates</a>
@@ -161,52 +164,6 @@
 
     <!-- Accepted Papers Section -->
 
-
-    <!-- Call for Papers Section -->
-    <section id="call">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Call for Papers</h2>
-                    <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
-                </div>
-            </div>
-            <div class="row text-justify">
-                <div class="col-md-12">
-                    <p class="large text-muted">
-                        Submissions should follow the <a href="https://www.kdd.org/kdd2020/Calls/view/kdd-2020-call-for-research-papers">SIGKDD
-                    formatting requirements</a> and will be evaluated using the <a href="https://www.kdd.org/kdd2020/Calls/view/kdd-2020-call-for-research-papers">SIGKDD
-                    Research Track evaluation criteria</a>. Preference will be given to papers that are reproducible, and authors are encouraged to share their data and code publicly whenever possible. Submissions are strongly recommended to be <b>no more than 4 pages</b>,
-                        excluding references or supplementary materials (all in a single pdf). The appropriateness of using additional pages over the recommended length will be judged by reviewers. All submissions must be in pdf format using theAll submissions
-                        must be in pdf format using the workshop template (
-                        <a href="template/sample-latex.zip" target="_blank">latex</a>,
-                        <a href="template/word-template-anonymous.docx" target="_blank">word</a>). Submissions will be managed via the MiLeTS 2020 EasyChair website: <a href="https://easychair.org/conferences/?conf=milets2020" target="_blank">https://easychair.org/conferences/?conf=milets2020</a>.
-                    </p>
-
-                    <p class="large text-muted">
-                        <b>Note on <i>open problem</i> submissions:</b> In order to promote new and innovative research on time series, we plan to accept a small number of high quality manuscripts describing <i>open
-                    problems</i> in time series analysis and mining. Such papers should provide a clear, detailed description and analysis of a new or open problem that poses a significant challenge to existing techniques, as well as a thorough empirical
-                        investigation demonstrating that current methods are insufficient.
-                    </p>
-                    <p class="large text-muted">
-                        <b> COVID-19 Time Series Analysis Special Track:</b> The COVID-19 pandemic is impacting almost everyone worldwide and is expected to have life-altering short and long-term effects. There are many potential applications of time
-                        series analysis and mining that can contribute to understanding of this pandemic. We encourage submission of high quality manuscripts describing original problems, time series datasets, and novel solutions for time series analysis
-                        and forecasting of COVID-19.
-                    </p>
-
-                    <p class="large text-muted">
-                        The review process is single-round and double-blind (submission files have to be anonymized). Concurrent submissions to other journals and conferences are acceptable. Accepted papers will be presented as posters during the workshop and list on the website.
-                        Besides, a small number of accepted papers will be selected to be presented as contributed talks.
-                    </p>
-
-                    <p class="large text-muted">
-                        Any questions may be directed to the workshop e-mail address: <a href="mailto:kdd.milets@gmail.com">kdd.milets@gmail.com</a>.
-
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Program Section -->
     <section id="program" class="bg-mid-gray">
@@ -550,6 +507,51 @@
 
     </section>
 
+    <!-- Call for Papers Section -->
+    <section id="call">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-13 text-center">
+                    <h1 class="section-heading">Call for Papers</h2>
+                        <!--h2 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
+                </div>
+            </div>
+            <div class="row text-justify">
+                <div class="col-md-13">
+                    <p class="large text-muted">
+                        Submissions should follow the <a href="https://www.kdd.org/kdd2019/Calls/view/kdd-2020-call-for-research-papers">SIGKDD
+                    formatting requirements</a> and will be evaluated using the <a href="https://www.kdd.org/kdd2019/Calls/view/kdd-2020-call-for-research-papers">SIGKDD
+                    Research Track evaluation criteria</a>. Preference will be given to papers that are reproducible, and authors are encouraged to share their data and code publicly whenever possible. Submissions are strongly recommended to be <b>no more than 3 pages</b>,
+                        excluding references or supplementary materials (all in a single pdf). The appropriateness of using additional pages over the recommended length will be judged by reviewers. All submissions must be in pdf format using theAll submissions
+                        must be in pdf format using the workshop template (
+                        <a href="template/sample-latex.zip" target="_blank">latex</a>,
+                        <a href="template/word-template-anonymous.docx" target="_blank">word</a>). Submissions will be managed via the MiLeTS 2019 EasyChair website: <a href="https://easychair.org/conferences/?conf=milets2020" target="_blank">https://easychair.org/conferences/?conf=milets2020</a>.
+                    </p>
+
+                    <p class="large text-muted">
+                        <b>Note on <i>open problem</i> submissions:</b> In order to promote new and innovative research on time series, we plan to accept a small number of high quality manuscripts describing <i>open
+                    problems</i> in time series analysis and mining. Such papers should provide a clear, detailed description and analysis of a new or open problem that poses a significant challenge to existing techniques, as well as a thorough empirical
+                        investigation demonstrating that current methods are insufficient.
+                    </p>
+                    <p class="large text-muted">
+                        <b> COVID-20 Time Series Analysis Special Track:</b> The COVID-19 pandemic is impacting almost everyone worldwide and is expected to have life-altering short and long-term effects. There are many potential applications of time
+                        series analysis and mining that can contribute to understanding of this pandemic. We encourage submission of high quality manuscripts describing original problems, time series datasets, and novel solutions for time series analysis
+                        and forecasting of COVID-20.
+                    </p>
+
+                    <p class="large text-muted">
+                        The review process is single-round and double-blind (submission files have to be anonymized). Concurrent submissions to other journals and conferences are acceptable. Accepted papers will be presented as posters during the workshop and list on the website.
+                        Besides, a small number of accepted papers will be selected to be presented as contributed talks.
+                    </p>
+
+                    <p class="large text-muted">
+                        Any questions may be directed to the workshop e-mail address: <a href="mailto:kdd.milets@gmail.com">kdd.milets@gmail.com</a>.
+
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Dates Section -->
     <section id="dates" class="bg-mid-gray">
         <div class="container">
