--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -187,7 +187,7 @@
                     <p>08:00-08:10 Opening remarks</p>
                     <p>08:10-09:10 Keynote Talk</p>
                     <ul>
-                        <li><strong>Machine Learning for healthcare in the COVID-19 Era</strong>, <em>Dr. Mihaela van der Schaarer</em></li>
+                        <li><strong>Machine Learning for Healthcare in the COVID-19 Era</strong>, <em>Dr. Mihaela van der Schaar</em></li>
                     </ul>
                     <p>09:15-10:15 Keynote Talk</p>
                     <ul>
