Adds detailed schedule.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -195,6 +195,18 @@
                     </ul>
                     <p>10:15-10:45 Coffee Break</p>
                     <p>10:45-12:00 Contributed Talks</p>
+                    <ul>
+                        <li>
+                            <strong>The Effectiveness of Discretization in Forecasting: An Empirical Study on Neural Time Series Models</strong>. Stephan Rabanser, Tim Januschowski, Valentin Flunkert, David Salinas and Jan Gasthaus</li>
+                        <li>
+                            <strong>Driver2vec: Driver Identification from Automotive Data</strong>. Jingbo Yang, Ruge Zhao, Meixian Zhu, Jaka Sodnik, David Hallac and Jure Leskovec</li>
+                        <li>
+                            <strong>Improving Robustness on Seasonality-Heavy Multivariate Time Series Anomaly Detection</strong>. Farzaneh Khoshnevisan, Zhewen Fan and Vitor Carvalho</li>
+                        <li>
+                            <strong>Detection of Environment Transitions in Time Series Data for Responsive Science</strong>. Ameya Daigavane, Kiri Wagstaff, Gary Doran, Corey Cochrane, Caitriona Jackman and Abigail Rymer</li>
+                        <li>
+                            <strong>Instance Explainable Temporal Network For Multivariate Timeseries</strong>. Naveen Madiraju and Homa Karimabadi</li>
+                    </ul>
                     <p>12:00-13:00 Lunch Break</p>
 
                     <h3>AFTERNOON SESSION</h3>
@@ -202,9 +214,12 @@
                     <ul>
                         <li><strong>The Efficient Transformer </strong>, <em>Dr. Łukasz Kaiser</em></li>
                     </ul>
-                    <p>14:00-14:30 Poster Highlights</p>
+                    <p>14:00-14:30 Poster Spotlights</p>
                     <p>14:30-15:00 Coffee Break</p>
-                    <p>15:00-16:00 Keynote Talk, Dr. Nikunj Oza</p>
+                    <p>15:00-16:00 Keynote Talk</p>
+                    <ul>
+                        <li><strong>Machine Learning for Aviation Safety</strong>, <em>Dr. Nikunj Oza</em></li>
+                    </ul>
                     <p>16:00-16:45 Poster Session</p>
                     <p>16:45-17:00 Concluding Remarks</p>
                 </div>
@@ -308,6 +323,7 @@
                 <div class="col-sm-8 text-justify">
                     </p>
                     <h3>Machine Learning for Healthcare in the COVID-19 Era </h3>
+
                     <br>
                     <b>Bio</b><br> Dr. Mihaela van der Schaar is the John Humphrey Plummer Professor of Machine Learning, Artificial Intelligence and Medicine at the University of Cambridge, a Fellow at The Alan Turing Institute in London, and a Chancellor’s
                     Professor at UCLA. Mihaela was elected IEEE Fellow in 2009. She has received numerous awards, including the Oon Prize on Preventative Medicine from the University of Cambridge (2018), a National Science Foundation CAREER Award (2004),
@@ -334,6 +350,16 @@
                 </div>
 
                 <div class="col-sm-8 text-justify">
+                    </p>
+                    <h3>Machine Learning for Aviation Safety </h3>
+                    <p>
+                        The National Airspace, with all of its aircraft, airports, personnel, and related infrastructure, is an incredibly safe system. It is essential that we keep it safe through the changes that it is experiencing, including expected increases in traffic over
+                        time, increasing variety of traffic in the form of Unmanned Aerial Vehicles (UAVs), and sharp reductions and increases in traffic due to transient phenomena such as pandemics. The system is currently monitored for safety issues
+                        through a set of exceedances, which are rules describing various known safety issues. By definition, these rules cannot identify previously-unknown safety issues. Additionally, they do not identify precursors to these safety issues—states
+                        that may not represent safety issues by themselves, but are circumstances under which safety issues are more likely to occur in the near future. In this talk, I describe machine learning-based methods that we have developed for
+                        anomaly detection and precursor identification and the aviation safety results that we have obtained. I also describe the active learning algorithm that we have developed to mitigate the false alarm problem that is common to data-driven
+                        anomaly detection methods. Our ultimate aim is to allow for aviation safety analysts to discover new safety issues as they arise.
+
                     </p>
                     <br>
                     <b>Bio</b><br> Dr. Nikunj Oza is the leader of the Data Sciences Group at NASA Ames Research Center. He also leads a NASA project team, which applies machine learning to aviation safety and operations problems. Dr. Oza’s 50+ research
