Adds video links.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -403,36 +403,36 @@
                     &nbsp;
                 </div>
                 <div class="col-lg-10 text-justify">
-
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_7.pdf" target="_blank">
-       The Effectiveness of Discretization in Forecasting: An Empirical Study on Neural Time Series Models
-    </a> Stephan Rabanser, Tim Januschowski, Valentin Flunkert, David Salinas and Jan Gasthaus
+                        <a href="papers/MiLeTS2020_paper_7.pdf" target="_blank"> 
+                        The Effectiveness of Discretization in Forecasting: An Empirical Study on Neural Time Series Models
+                        </a> Stephan Rabanser, Tim Januschowski, Valentin Flunkert, David Salinas and Jan Gasthaus. <a href="https://drive.google.com/file/d/15hJaB_EQf6tTnHvPS2WBloyeHkk8hziT/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_17.pdf" target="_blank">
-        Driver2vec: Driver Identification from Automotive Data
-        </a> Jingbo Yang, Ruge Zhao, Meixian Zhu, Jaka Sodnik, David Hallac and Jure Leskovec
+                        <a href="papers/MiLeTS2020_paper_17.pdf" target="_blank"> 
+                        Driver2vec: Driver Identification from Automotive Data
+                        </a> Jingbo Yang, Ruge Zhao, Meixian Zhu, Jaka Sodnik, David Hallac and Jure Leskovec. <a href="https://drive.google.com/file/d/1mCz3fFrN766gezq8XSdcx4pBtei8hovY/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_16.pdf" target="_blank">
-        Improving Robustness on Seasonality-Heavy Multivariate Time Series Anomaly Detection
-        </a> Farzaneh Khoshnevisan, Zhewen Fan and Vitor Carvalho
+                        <a href="papers/MiLeTS2020_paper_16.pdf" target="_blank"> 
+                        Improving Robustness on Seasonality-Heavy Multivariate Time Series Anomaly Detection
+                        </a> Farzaneh Khoshnevisan, Zhewen Fan and Vitor Carvalho. <a href="https://drive.google.com/file/d/1EK1p78F8ZznN_xtKiTuKNGMm9TyZGHH_/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_11.pdf" target="_blank">
-        Detection of Environment Transitions in Time Series Data for Responsive Science
-        </a> Ameya Daigavane, Kiri Wagstaff, Gary Doran, Corey Cochrane, Caitriona Jackman and Abigail Rymer
+                        <a href="papers/MiLeTS2020_paper_11.pdf" target="_blank"> 
+                        Detection of Environment Transitions in Time Series Data for Responsive Science
+                        </a> Ameya Daigavane, Kiri Wagstaff, Gary Doran, Corey Cochrane, Caitriona Jackman and Abigail Rymer. <a href="https://drive.google.com/file/d/1sXu4PmpZien-TCkk-SYRZwN916XIkZbE/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_20.pdf" target="_blank">
-        Instance Explainable Temporal Network For Multivariate Timeseries
-        </a> Naveen Madiraju and Homa Karimabadi
+                        <a href="papers/MiLeTS2020_paper_20.pdf" target="_blank"> 
+                        Instance Explainable Temporal Network For Multivariate Timeseries
+                        </a> Naveen Madiraju and Homa Karimabadi. <a href="https://drive.google.com/file/d/1gP9XcCAWyiLQKJTpUlLNL4SmSuo0M3zD/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
+
                 </div>
                 <div class="col-lg-1 text-justify">
                     &nbsp;
@@ -460,66 +460,67 @@
                 </div>
                 <div class="col-lg-10 text-justify">
 
-
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_6.pdf" target="_blank">
-       Modality Selection for Classification on Time-series Data
-    </a> Murchana Baruah and Bonny Banerjee
+                        <a href="papers/MiLeTS2020_paper_6.pdf" target="_blank"> 
+                        Modality Selection for Classification on Time-series Data
+                        </a> Murchana Baruah and Bonny Banerjee. <a href="https://drive.google.com/file/d/1-UZZZAmHuVzsgg9RK2R9dBM-ToR_USWD/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_8.pdf" target="_blank">
-       Machine Learning Methods for Predictive Maintenance of Multifunctional Printers
-    </a> Wojciech Indyk, Zuzana Neverilova and Jakub Valcik
+                        <a href="papers/MiLeTS2020_paper_8.pdf" target="_blank"> 
+                        Machine Learning Methods for Predictive Maintenance of Multifunctional Printers
+                        </a> Wojciech Indyk, Zuzana Neverilova and Jakub Valcik. <a href="https://drive.google.com/file/d/1TLku_cN3_XTua6-DDEp3WRgaNNqrFiLf/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_1.pdf" target="_blank">
-       Towards Deep Unsupervised Representation Learning from Accelerometer Time Series for Animal Activity Recognition
-    </a> Jacob Kamminga, Viet Duc Le, Nirvana Meratnia and Paul Havinga
+                        <a href="papers/MiLeTS2020_paper_1.pdf" target="_blank"> 
+                        Towards Deep Unsupervised Representation Learning from Accelerometer Time Series for Animal Activity Recognition
+                        </a> Jacob Kamminga, Viet Duc Le, Nirvana Meratnia and Paul Havinga. <a href="https://drive.google.com/file/d/1_hw3u1YdRbi7nG17aucjBYVNFYCUTqxp/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_3.pdf" target="_blank">
-       Statistical Evaluation of Anomaly Detectors for Sequences
-    </a> Erik Scharwächter and Emmanuel Müller
+                        <a href="papers/MiLeTS2020_paper_3.pdf" target="_blank"> 
+                        Statistical Evaluation of Anomaly Detectors for Sequences
+                        </a> Erik Scharwächter and Emmanuel Müller. <a href="https://drive.google.com/file/d/11__P6A4B5FyyUhZuh355FUG9w-GCLFpI/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_12.pdf" target="_blank">
-       A framework for incorporating  data acquisition cost in predictive time series models
-    </a> Adrian Stetco, Razvan Mosincat, Goran Nenadic and John Keane
+                        <a href="papers/MiLeTS2020_paper_12.pdf" target="_blank"> 
+                        Towards a framework for incorporating  data acquisition cost in predictive time series models
+                        </a> Adrian Stetco, Razvan Mosincat, Goran Nenadic and John Keane. <a href="https://drive.google.com/file/d/1R4pvN71zCRz3sd4MZQmPYmY6fESLbirM/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_18.pdf" target="_blank">
-       PastProp-RNN: improved predictions of the future by correcting the past
-    </a> André Baptista, Yassine Baghoussi, Carlos Soares, Miguel Arantes and João Mendes-Moreira
+                        <a href="papers/MiLeTS2020_paper_18.pdf" target="_blank"> 
+                        PastProp-RNN: improved predictions of the future by correcting the past
+                        </a> André Baptista, Yassine Baghoussi, Carlos Soares, Miguel Arantes and João Mendes-Moreira. <a href="https://drive.google.com/file/d/1zP0BL3AArO2g7Q2yfVSBULPsNBxGLXTw/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_5.pdf" target="_blank">
-       RobustTAD: Robust Time Series Anomaly Detection via Decomposition and Convolutional Neural Networks
-    </a> Jingkun Gao, Xiaomin Song, Qingsong Wen, Pichao Wang, Liang Sun and Huan Xu
+                        <a href="papers/MiLeTS2020_paper_5.pdf" target="_blank"> 
+                        RobustTAD: Robust Time Series Anomaly Detection via Decomposition and Convolutional Neural Networks
+                        </a> Jingkun Gao, Xiaomin Song, Qingsong Wen, Pichao Wang, Liang Sun and Huan Xu. <a href="https://drive.google.com/file/d/1912b2A7iEiSCrtSTPJhI-j5mqX1tEuwd/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_13.pdf" target="_blank">
-       Forecasting Hierarchical Time Series with a Regularized Embedding Space
-    </a> Jeffrey Gleason
+                        <a href="papers/MiLeTS2020_paper_13.pdf" target="_blank"> 
+                        Forecasting Hierarchical Time Series with a Regularized Embedding Space
+                        </a> Jeffrey Gleason. <a href="https://drive.google.com/file/d/17UUW5b_zzE8wsZm3f9sF--gDWUxcsnFL/view?usp=sharing" target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_15.pdf" target="_blank">
-       Towards Automating Time Series Analysis for Paleogeosciences
-    </a> Deborah Khider, Pratheek Athreya, Varun Ratnakar, Yolanda Gil, Feng Zhu, Myron Kwan and Julien Emile-Geay
+                        <a href="papers/MiLeTS2020_paper_15.pdf" target="_blank"> 
+                        Towards Automating Time Series Analysis for Paleogeosciences
+                        </a> Deborah Khider, Pratheek Athreya, Varun Ratnakar, Yolanda Gil, Feng Zhu, Myron Kwan and Julien Emile-Geay. <a href="https://drive.google.com/file/d/1wuP8XRz4MmK6aUSsXvE475hO2Me8giAj/view?usp=sharing"
+                            target="_blank">[Video]</a>
                     </p>
 
                     <p class="row large text-muted">
-                        <a href="papers/MiLeTS2020_paper_19.pdf" target="_blank">
-       Interpreting Deep Temporal Neural Networks by Selective Visualization of Internally Activated Nodes
-    </a> Sohee Cho, Wonjoon Chang, Ginkyeng Lee and Jaesik Choi
-                    </p> ​
+                        <a href="papers/MiLeTS2020_paper_19.pdf" target="_blank"> 
+                        Interpreting Deep Temporal Neural Networks by Selective Visualization of Internally Activated Nodes
+                        </a> Sohee Cho, Wonjoon Chang, Ginkyeng Lee and Jaesik Choi. <a href="https://drive.google.com/file/d/1m7mudCMHjpnB43-gs-ocuD-gqaJxshuX/view?usp=sharing" target="_blank">[Video]</a>
+                    </p>
+
 
                     <!-- End Poster List -->
 
