--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -187,11 +187,11 @@
                     <p>08:00-08:10 Opening remarks</p>
                     <p>08:10-09:10 Keynote Talk</p>
                     <ul>
-                        <li><strong>Machine Learning for Healthcare in the COVID-19 Era</strong>, <em>Dr. Mihaela van der Schaar</em></li>
+                        <li><strong>Machine Learning for Healthcare in the COVID-19 Era</strong>, <em>Mihaela van der Schaar</em></li>
                     </ul>
                     <p>09:15-10:00 Keynote Talk</p>
                     <ul>
-                        <li><strong>Think Globally, Act Locally: A Deep Neural Network Approach to High-Dimensional Time Series Forecasting</strong>, <em>Dr. Inderjit S. Dhillon</em></li>
+                        <li><strong>Think Globally, Act Locally: A Deep Neural Network Approach to High-Dimensional Time Series Forecasting</strong>, <em>Inderjit S. Dhillon</em></li>
                     </ul>
                     <p>10:00-10:30 Coffee Break</p>
                     <p>10:30-12:00 Contributed Talks</p>
@@ -212,13 +212,13 @@
                     <h3>AFTERNOON SESSION</h3>
                     <p>13:00-14:00 Keynote Talk</p>
                     <ul>
-                        <li><strong>The Efficient Transformer </strong>, <em>Dr. Łukasz Kaiser</em></li>
+                        <li><strong>The Efficient Transformer </strong>, <em>Łukasz Kaiser</em></li>
                     </ul>
                     <p>14:00-14:30 Poster Spotlights</p>
                     <p>14:30-15:00 Coffee Break</p>
                     <p>15:00-16:00 Keynote Talk</p>
                     <ul>
-                        <li><strong>Machine Learning for Aviation Safety</strong>, <em>Dr. Nikunj Oza</em></li>
+                        <li><strong>Machine Learning for Aviation Safety</strong>, <em>Nikunj Oza</em></li>
                     </ul>
                     <p>16:00-16:45 Poster Session</p>
                     <p>16:45-17:00 Concluding Remarks</p>
