Updates title of speakers.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -266,8 +266,8 @@
                         can have vastly different scales, without a priori normalization or rescaling. Empirical results demonstrate that DeepGLO can outperform state-of-the-art approaches; for example, we see more than 25% improvement in WAPE over other
                         methods on a public dataset that contains more than 100K-dimensional time series. This is joint work with Rajat Sen and Hsiang-Fu Yu.
                     </p>
-                    <b>Bio</b><br> Dr. Inderjit Dhillon is the Gottesman Family Centennial Professor of Computer Science and Mathematics at UT Austin, where he is also the Director of the ICES Center for Big Data Analytics. Currently he is on leave from
-                    UT Austin and heads the Amazon Research Lab in Berkeley, California, where he is developing and deploying state-of-the-art machine learning methods for Amazon Search. His main research interests are in big data, machine learning, network
+                    <b>Bio</b><br> Inderjit Dhillon is the Gottesman Family Centennial Professor of Computer Science and Mathematics at UT Austin, where he is also the Director of the ICES Center for Big Data Analytics. Currently he is on leave from UT
+                    Austin and heads the Amazon Research Lab in Berkeley, California, where he is developing and deploying state-of-the-art machine learning methods for Amazon Search. His main research interests are in big data, machine learning, network
                     analysis, linear algebra and optimization. He received his B.Tech. degree from IIT Bombay, and Ph.D. from UC Berkeley. Inderjit has received the following awards: the ICES Distinguished Research Award, the SIAM Outstanding Paper Prize,
                     the Moncrief Grand Challenge Award, the SIAM Linear Algebra Prize, the University Research Excellence Award, and the NSF Career Award. He has published over 175 journal and conference papers, and has served on the Editorial Board of
                     the Journal of Machine Learning Research, the IEEE Transactions of Pattern Analysis and Machine Intelligence, Foundations and Trends in Machine Learning and the SIAM Journal for Matrix Analysis and Applications. Inderjit is actively
@@ -300,9 +300,9 @@
                     the use of some Transformers before. I will finish with new applications of Reformer that open up.
                     <br>
                     <br>
-                    <b>Bio</b><br> Dr. Łukasz Kaiser joined Google in 2013 and is currently a staff Research Scientist in the Google Brain Team in Mountain View, where he works on fundamental aspects of deep learning and natural language processing. He
-                    has co-designed state-of-the-art neural models for machine translation, parsing and other algorithmic and generative tasks and co-authored the TensorFlow system, the Tensor2Tensor and Trax libraries and the Transformer model. Before
-                    joining Google, Lukasz was a tenured researcher at University Paris Diderot and worked on logic and automata theory. He received his PhD from RWTH Aachen University in 2008 and his MSc from the University of Wroclaw, Poland.
+                    <b>Bio</b><br> Łukasz Kaiser joined Google in 2013 and is currently a staff Research Scientist in the Google Brain Team in Mountain View, where he works on fundamental aspects of deep learning and natural language processing. He has
+                    co-designed state-of-the-art neural models for machine translation, parsing and other algorithmic and generative tasks and co-authored the TensorFlow system, the Tensor2Tensor and Trax libraries and the Transformer model. Before joining
+                    Google, Lukasz was a tenured researcher at University Paris Diderot and worked on logic and automata theory. He received his PhD from RWTH Aachen University in 2008 and his MSc from the University of Wroclaw, Poland.
                     </p>
                 </div>
             </div>
@@ -325,7 +325,7 @@
                     <h3>Machine Learning for Healthcare in the COVID-19 Era </h3>
 
                     <br>
-                    <b>Bio</b><br> Dr. Mihaela van der Schaar is the John Humphrey Plummer Professor of Machine Learning, Artificial Intelligence and Medicine at the University of Cambridge, a Fellow at The Alan Turing Institute in London, and a Chancellor’s
+                    <b>Bio</b><br>Mihaela van der Schaar is the John Humphrey Plummer Professor of Machine Learning, Artificial Intelligence and Medicine at the University of Cambridge, a Fellow at The Alan Turing Institute in London, and a Chancellor’s
                     Professor at UCLA. Mihaela was elected IEEE Fellow in 2009. She has received numerous awards, including the Oon Prize on Preventative Medicine from the University of Cambridge (2018), a National Science Foundation CAREER Award (2004),
                     3 IBM Faculty Awards, the IBM Exploratory Stream Analytics Innovation Award, the Philips Make a Difference Award and several best paper awards, including the IEEE Darlington Award. Mihaela’s work has also led to 35 USA patents (many
                     widely cited and adopted in standards) and 45+ contributions to international standards for which she received 3 International ISO (International Organization for Standardization) Awards. In 2019, she was identified by National Endowment
@@ -362,12 +362,12 @@
 
                     </p>
                     <br>
-                    <b>Bio</b><br> Dr. Nikunj Oza is the leader of the Data Sciences Group at NASA Ames Research Center. He also leads a NASA project team, which applies machine learning to aviation safety and operations problems. Dr. Oza’s 50+ research
-                    papers represent his research interests, which include data mining, machine learning, ensemble learning, anomaly detection, and their applications to Aeronautics and Earth Science. He received the Arch T. Colwell Award for co-authoring
-                    one of the five most innovative technical papers selected from 3300+ SAE technical papers in 2005. His data mining team received the 2018 and 2019 NASA Honor Awards and the 2010 NASA Aeronautics Research Mission Directorate Associate
-                    Administrator¹s Award. In 2019, he was named by Cognilytica as one of 50 key people in the US government working to move the adoption of AI forward across the industry. He is an Associate Editor for the peer-reviewed journal Information
-                    Fusion (Elsevier) and has served as organizer, senior program committee member, and program committee member of several data mining and machine learning conferences. He received his B.S. in Mathematics with Computer Science from MIT
-                    in 1994, and M.S. (in 1998) and Ph.D. (in 2001) in Computer Science from the University of California at Berkeley.
+                    <b>Bio</b><br> Nikunj Oza is the leader of the Data Sciences Group at NASA Ames Research Center. He also leads a NASA project team, which applies machine learning to aviation safety and operations problems. Dr. Oza’s 50+ research papers
+                    represent his research interests, which include data mining, machine learning, ensemble learning, anomaly detection, and their applications to Aeronautics and Earth Science. He received the Arch T. Colwell Award for co-authoring one
+                    of the five most innovative technical papers selected from 3300+ SAE technical papers in 2005. His data mining team received the 2018 and 2019 NASA Honor Awards and the 2010 NASA Aeronautics Research Mission Directorate Associate Administrator¹s
+                    Award. In 2019, he was named by Cognilytica as one of 50 key people in the US government working to move the adoption of AI forward across the industry. He is an Associate Editor for the peer-reviewed journal Information Fusion (Elsevier)
+                    and has served as organizer, senior program committee member, and program committee member of several data mining and machine learning conferences. He received his B.S. in Mathematics with Computer Science from MIT in 1994, and M.S.
+                    (in 1998) and Ph.D. (in 2001) in Computer Science from the University of California at Berkeley.
                     </p>
                 </div>
             </div>
