Updates YouTube Channel links.

--- a/milets2020/index.html
+++ b/milets2020/index.html
@@ -114,8 +114,15 @@
     </header>
 
     <!-- Introduction Section -->
-    <section id="introduction">
+    <section id="introduction" style="padding-top: 30px;">
         <div class="container">
+            <div class="row" style="padding-bottom: 30px;">
+                <div class="col-lg-12 text-center">
+                    <h3 style="text-transform: none;">Videos of keynote talks, contributed talks and poster highlights are available at the
+                        <a href="https://www.youtube.com/channel/UCFqNPKS1AWKRkfc0spjOJog/playlists" target="_blank">MiLeTS 2020 YouTube Channel.</a>
+                    </h3>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Introduction</h2>
