--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -273,13 +273,13 @@
                     &nbsp;
                 </div>
 
-                <div class="col-sm-2">
+                <!-- <div class="col-sm-2">
                     <div class="team-member">
                         <img src="img/roseyu.jpg" class="img-responsive img-circle" alt="">
                         <h4><a href="http://roseyu.com/">Qi (Rose) Yu</a></h4>
                         <p class="text-muted">University of California, San Diego</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-sm-2">
                     &nbsp;
