Updates organizer info.

--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -288,7 +288,7 @@
                 <div class="col-sm-2">
                     <div class="team-member">
                         <img src="img/yaguangli.jpg" class="img-responsive img-circle" alt="">
-                        <h4><a href="http://www-scf.usc.edu/~yaguang/">YaGuang Li</a></h4>
+                        <h4><a href="https://liyaguang.github.io/">YaGuang Li</a></h4>
                         <p class="text-muted">Google</p>
                     </div>
                 </div>
