--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -108,7 +108,7 @@
             <div class="intro-text" style="visibility: hidden;">
                 <div class="intro-lead-in">Held in conjunction with <a href="http://www.kdd.org/kdd2021/" target=_blank>KDD'21</a><br/> Aug 14th, 2021 - Virtual Conference
                 </div>
-                <div class="intro-heading">7th Workshop on <br/>Mining and Learning from Time Series</div>
+                <div class="intro-heading">7th SIGKDD Workshop on <br/>Mining and Learning from Time Series</div>
             </div>
         </div>
     </header>
