--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="MiLeTs 2021, 7th SIGKDD Workshop on Mining and Learning from Time Series (MiLeTS), co-located with KDD 2021, Singapore">
+    <meta name="description" content="MiLeTS 2021, 7th SIGKDD Workshop on Mining and Learning from Time Series (MiLeTS), co-located with KDD 2021, Singapore">
     <meta property="og:image" content="https://kdd-milets.github.io/milets2021/img/thumbnail.jpg">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="The 7th SIGKDD Mining and Learning from Time Series Workshop">
