--- a/milets2021/index.html
+++ b/milets2021/index.html
@@ -273,23 +273,22 @@
                     &nbsp;
                 </div>
 
-                <!-- <div class="col-sm-2">
-                    <div class="team-member">
-                        <img src="img/roseyu.jpg" class="img-responsive img-circle" alt="">
-                        <h4><a href="http://roseyu.com/">Qi (Rose) Yu</a></h4>
-                        <p class="text-muted">University of California, San Diego</p>
-                    </div>
-                </div> -->
-
-                <div class="col-sm-2">
-                    &nbsp;
-                </div>
-
                 <div class="col-sm-2">
                     <div class="team-member">
                         <img src="img/yaguangli.jpg" class="img-responsive img-circle" alt="">
                         <h4><a href="https://liyaguang.github.io/">YaGuang Li</a></h4>
                         <p class="text-muted">Google</p>
+                    </div>
+                </div>
+
+                <div class="col-sm-2">
+                    &nbsp;
+                </div>
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="img/zhengping.png" class="img-responsive img-circle" alt="">
+                        <h4><a href="https://chezhengping.xyz/">Zhengping Che</a></h4>
+                        <p class="text-muted">Didi Chuxing</p>
                     </div>
                 </div>
             </div>
